--- a/app/views/mio_profilo/account.html.erb
+++ b/app/views/mio_profilo/account.html.erb
@@ -10,6 +10,7 @@
 <div class="fs-content-layout-row">
 <div>
   <h2><%= l(:label_abbo) %> <%= link_to l(:label_login_with_open_id_option), signin_url if Setting.openid? %></h2>
+  <p id="fs-abbo-pay">Per rinnovare o acquistare un abbonamento trovi tutte le informazioni nella pagina <%= link_to 'abbonamenti', page_abbonamento_path  %>. </p>
   <blockquote>
     In questa pagina puoi gestire i tuoi<strong> dati di abbonamento</strong>, puoi cambiare i dati di<strong>
     login</strong> e anche personalizzare il tuo profilo con una foto come
@@ -18,11 +19,10 @@
     <a target="_blank" href="https://it.gravatar.com/" style="font-weight: bold;"> Gravatar </a> puoi scegliere questa
     opzione.
     Ricorda che i campi contrassegnati da <span style="color: red;">*sono obbligatori</span>
-  </blockquote>
+     </blockquote>
   <br/>
 </div>
 <p><%= link_to(l(:button_show_profile), :action => 'page', :class => 'button-grey') %></p>
-
 <!------  inizio ------ -->
 <% labelled_form_for @user, :url => my_profile_edit_url, :html => {:method => :post, :class => "register tabular", :onsubmit => "return doControlOfFields(event);", :class => "step", :multipart => true} do |f| %>
     <%= error_messages_for 'user' %>
