--- a/app/views/newsletter_archives/new.html.erb
+++ b/app/views/newsletter_archives/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New newsletter_user</h1>
+<h1>New newsletter_archive</h1>
 
-<% form_for(@newsletter_user) do |f| %>
+<% form_for(@newsletter_archive) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -12,28 +12,28 @@
     <%= f.text_field :user_id %>
   </p>
   <p>
-    <%= f.label :convention_id %><br />
-    <%= f.text_field :convention_id %>
-  </p>
-  <p>
-    <%= f.label :html %><br />
-    <%= f.text_area :html %>
+    <%= f.label :asso_id %><br />
+    <%= f.text_field :asso_id %>
   </p>
   <p>
     <%= f.label :newsletter_id %><br />
     <%= f.text_field :newsletter_id %>
   </p>
   <p>
-    <%= f.label :errore %><br />
-    <%= f.text_area :errore %>
+    <%= f.label :information_id %><br />
+    <%= f.text_field :information_id %>
   </p>
   <p>
     <%= f.label :sended %><br />
     <%= f.check_box :sended %>
   </p>
   <p>
+    <%= f.label :created_at %><br />
+    <%= f.datetime_select :created_at %>
+  </p>
+  <p>
     <%= f.submit 'Create' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', newsletter_users_path %>
+<%= link_to 'Back', newsletter_archives_path %>
