--- a/app/views/newsletter_users/index.html.erb
+++ b/app/views/newsletter_users/index.html.erb
@@ -2,26 +2,24 @@
 
 <table>
   <tr>
-    <th>email_type</th>
+    <th>Tipo</th>
     <th>User</th>
     <th>Associazione</th>
-    <th>Data scadenza</th>
-    <th>html</th>
-    <th>newsletter_id</th>
-    <th>errore</th>
-    <th>sended</th>
+    <th>Newsletter</th>
+    <th style="color: red;">Errore</th>
+    <th>Sended?</th>
+    <th>Data</th>
   </tr>
 
 <% @newsletter_users.each do |newsletter_user| %>
   <tr>
     <td><%=h newsletter_user.email_type %></td>
-    <td><%=h newsletter_user.user_id %></td>
+    <td><%=h newsletter_user.user %></td>
     <td><%=h newsletter_user.convention_id %></td>
-    <td><%=h newsletter_user.data_scadenza %></td>
-    <td><%=h newsletter_user.html %></td>
     <td><%=h newsletter_user.newsletter_id %></td>
-    <td><%=h newsletter_user.errore %></td>
+    <td><%=h newsletter_user.errore_abbrv %></td>
     <td><%=h newsletter_user.sended %></td>
+    <td><%=h newsletter_user.created_at %></td>
     <td><%= link_to 'Show', newsletter_user %></td>
     <td><%= link_to 'Edit', edit_newsletter_user_path(newsletter_user) %></td>
     <td><%= link_to 'Destroy', newsletter_user, :confirm => 'Are you sure?', :method => :delete %></td>
