--- a/app/views/conventions/index.html.erb
+++ b/app/views/conventions/index.html.erb
@@ -10,9 +10,9 @@
     <th style='width: 5%; color: #2A5685;'>Logo</th>
   <%= sort_header_tag('ragione_sociale', :title => l(:label_ragione_sociale), :style => 'width: 35%;text-align:left;')%>
   <%= sort_header_tag('Tipo_Sigla', :title => l(:label_convention_pact), :style => 'width: 20%;text-align:left;')%>
-  <%= sort_header_tag('scadenza', :title => l(:label_condisabledvention_ref), :style => 'width: 20%;')%>
+  <%= sort_header_tag('scadenza', :title => l(:label_scadenza), :style => 'width: 20%;')%>
   <%#sort_header_tag('presidente', :title => l(:label_convention_people), :style => 'width: 15%;text-align:left;')%>
-  <%= sort_header_tag('contatti', :title => l(:label_convention_contact), :style => 'width: 15%;text-align:left;')%>
+  <%= sort_header_tag('contatti', :title => l(:label_contact_plural), :style => 'width: 15%;text-align:left;')%>
 
   <th style='width: 2%;'></th>
   <th style='width: 2%;'></th>
