--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,36 +1,41 @@
 <div class="contextual">
-<%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' %>
+  <%= link_to l(:label_invoice_new), new_invoice_path, :class => 'icon icon-add' %>
 </div>
 
 <% if @invoices.any? %>
-<table class="list invoices">
-  <thead><tr>
-  <%= sort_header_tag('numero_fattura', :title => l(:label_numero_fattura), :style => 'width: 20%;text-align:left;')%>
-  <%= sort_header_tag('user', :title => l(:label_user), :style => 'width: 20%;text-align:left;')%>
-  <%= sort_header_tag('data_fattura', :title => l(:label_data_fattura), :style => 'width: 15%;')%>
-  <%= sort_header_tag('anno', :title => l(:label_anno), :style => 'width: 10%;')%>
-  <%= sort_header_tag('tariffa', :title => l(:label_tariffa), :style => 'width: 10%;')%>
-  <%= sort_header_tag('pagamento', :title => l(:label_pagamento), :style => 'width: 25%;')%>
-  <th style='width: 5%;'></th>
-  <th style='width: 5%;'></th>
-  </tr></thead>
-  <tbody>
-<% @invoices.each do |invoice| %>
-  <tr class="<%= cycle 'odd', 'even' %>">
-    <td><%= link_to h(invoice.numero_fattura), invoice_path(invoice) %></td>
-    <td><%= link_to h(invoice.user), user_path(invoice.user, :id => invoice.user_id) %></td>
-    <td align="left"><%= format_date(invoice.data_fattura) %></td>
-    <td align="right"><%=h invoice.anno %></td>
-    <td align="right"><%=h invoice.tariffa %></td>
-    <td align="left"><%=h invoice.pagamento %></td>
-    <td class="buttons"><%= link_to('', edit_invoice_path(invoice), :class => 'icon icon-edit') if User.current.admin? %></td>
-    <td class="buttons"><%= link_to ('', invoice, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
-  </tr>
-<% end %>
-</table>
+    <table class="list invoices">
+      <thead>
+      <tr>
+        <%= sort_header_tag('numero_fattura', :title => l(:label_numero_fattura), :style => 'width: 20%;text-align:left;') %>
+        <%= sort_header_tag('user', :title => l(:label_user), :style => 'width: 20%;text-align:left;') %>
+        <%= sort_header_tag('data_fattura', :title => l(:label_data_fattura), :style => 'width: 15%;') %>
+        <%= sort_header_tag('anno', :title => l(:label_anno), :style => 'width: 10%;') %>
+        <%= sort_header_tag('tariffa', :title => l(:label_tariffa), :style => 'width: 10%;') %>
+        <%= sort_header_tag('pagamento', :title => l(:label_pagamento), :style => 'width: 25%;') %>
+        <th style='width: 5%;'></th>
+        <th style='width: 5%;'></th>
+        <th style='width: 5%;'></th>
+      </tr>
+      </thead>
+      <tbody>
+      <% @invoices.each do |invoice| %>
+          <tr class="<%= cycle 'odd', 'even' %>">
+            <td><%= link_to h(invoice.numero_fattura), invoice_path(invoice) %></td>
+            <td><%= link_to h(invoice.user), user_path(invoice.user, :id => invoice.user_id) %></td>
+            <td align="left"><%= format_date(invoice.data_fattura) %></td>
+            <td align="right"><%= h invoice.anno %></td>
+            <td align="right"><%= h invoice.tariffa %></td>
+            <td align="left"><%= h invoice.pagamento %></td>
+            <td class="buttons"><%= link_to('', invoice_download_pdf_path(invoice.id),:target => '_blank', :class => 'icon icon-file application-pdf') if User.current.admin? %></td>
+            <td class="buttons"><%= link_to('', edit_invoice_path(invoice), :class => 'icon icon-edit') if User.current.admin? %></td>
+            <td class="buttons"><%= link_to('', invoice, :confirm => l(:text_are_you_sure), :method => :delete, :class => 'icon icon-del') if User.current.admin? %></td>
 
-<p class="pagination"><%= pagination_links_full @invoice_pages, @invoice_count %></p>
+          </tr>
+      <% end %>
+      </table>
+
+    <p class="pagination"><%= pagination_links_full @invoice_pages, @invoice_count %></p>
 
 <% else %>
-<p class="nodata"><%= l(:label_no_data) %></p>
+    <p class="nodata"><%= l(:label_no_data) %></p>
 <% end %>
